# django-presigned-google-storage-system-design

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
datacollection/: serializers.py  urls.py  views.py
datacollection/service/storage/: gcs.py
s3presignupload/: asgi.py  settings.py  urls.py  wsgi.py
